mobile overflow fixed

--- a/app.css
+++ b/app.css
@@ -140,6 +140,9 @@ button {
         padding-top: 20px;
         padding-left: 15px;
         padding-right: 15px;
+        height: 100vh;
+        overflow: hidden;
+
     }
 
     h1 {
